test/cf/invalid_templates/cf_http_send_v1.yaml
# Copyright 2019 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
apiVersion: templates.gatekeeper.sh/v1alpha1
kind: ConstraintTemplate
metadata:
  name: cf-http-send-v1
spec:
  crd:
    spec:
      names:
        kind: CFHttpSendV1
      validation:
        openAPIV3Schema:
          properties: {}
  targets:
    validation.gcp.forsetisecurity.org:
      rego: |
        #
        # Copyright 2018 Google LLC
        #
        # Licensed under the Apache License, Version 2.0 (the "License");
        # you may not use this file except in compliance with the License.
        # You may obtain a copy of the License at
        #
        #      http://www.apache.org/licenses/LICENSE-2.0
        #
        # Unless required by applicable law or agreed to in writing, software
        # distributed under the License is distributed on an "AS IS" BASIS,
        # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        # See the License for the specific language governing permissions and
        # limitations under the License.
        #

        package templates.cf.HttpSendV1

        deny[{
        	"msg": message,
        	"details": metadata,
        }] {
          response := http.send({
            "method" : "GET",
            "url": "https://compute.googleapis.com/compute/v1/projects",
            "headers": {"Accept": "application/json", "Content-Type": "application/json"}
          })
        	message := sprintf("I'm doing something forbidden! %s", [input.asset.name])
        	metadata := {}
        }
